Parent name and padding kids layout

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,13 +55,14 @@
         app:layout_constraintTop_toBottomOf="@+id/parent_name" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:alpha="0.8"
         android:id="@+id/recycler_parent_kids"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="40dp"
+        android:layout_marginEnd="16dp"
+        android:alpha="0.8"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/krepysh_text" />
