--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,12 +15,30 @@
         android:id="@+id/navigation_dashboard"
         android:name="com.example.newkrepysh.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard" >
+        <action
+            android:id="@+id/action_navigation_dashboard_to_newsDescriptionFragment"
+            app:destination="@id/newsDescriptionFragment" />
+        <argument
+            android:name="somebody"
+            android:defaultValue="arg"
+            app:argType="string"/>
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.newkrepysh.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/newsDescriptionFragment"
+        android:name="com.example.newkrepysh.ui.NewsDescriptionFragment"
+        android:label="fragment_news_description"
+        tools:layout="@layout/fragment_news_description" >
+        <argument
+            android:name="someArgs"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
 
 </navigation>
