--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/navigation_home"
         android:name="com.example.newkrepysh.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_kidsProfileFragment"
+            app:destination="@id/kidsProfileFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
@@ -39,6 +43,17 @@
             android:name="someArgs"
             app:argType="string"
             app:nullable="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/kidsProfileFragment"
+        android:name="com.example.newkrepysh.ui.profile.KidsProfileFragment"
+        android:label="fragment_kids_profile"
+        tools:layout="@layout/fragment_kids_profile" >
+        <argument
+            android:name="child_id"
+            app:argType="integer" />
+        <argument android:name="user_id"
+            app:argType="integer" />
     </fragment>
 
 </navigation>
